Bug 244081 - Select Recipient functionality always add addresses as To
Summary: Select Recipient functionality always add addresses as To
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Casey Link
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-09 22:17 UTC by Sabine Faure
Modified: 2010-07-15 20:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-07-09 22:17:34 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Whether the user clicks on the 'Add as CC' or 'Add as BCC' the selected recipient is always added as a 'To' in the Composer dialogue.

Reproducible: Always

Steps to Reproduce:
- Launch Kontact and go to Kmail
- Click on 'New'
- Go to Tools menu/Select Recipients...
- Select a recipient from the list and click on the 'Add as CC' button

Actual Results:  
The recipient is added to the composer dialogue but in the 'To' line edit

Expected Results:  
whereas it should be added as a 'CC'

The same thing happens with the 'Add as BCC' button.

Trunk, Svn Rev 1147919
Comment 1 Thomas McGuire 2010-07-11 06:07:32 UTC
Confirmed in trunk. This works in the 4.5 branch, so I assume this is a regression from the recent recipient editor refactoring. Assigning to Casey, who worked on that.
Comment 2 Casey Link 2010-07-11 17:21:01 UTC
SVN commit 1148686 by link:

Fix regression. Recipients picked in the recipients picker will now be picked with the correct type as picked in the recipients picker. :)

BUG: 244081

 M  +1 -1      recipientline.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1148686
Comment 3 Sabine Faure 2010-07-15 20:11:15 UTC
It is corrected now.

The recipient is correctly added to the composer dialogue as a 'CC' or 'BCC' or 'TO' depending on the user's choice now.

Trunk, Svn Rev 1150325
Comment 4 Sabine Faure 2010-07-15 20:33:03 UTC
humm, turns out that it works only is the recipient is added as 'CC'.

If the recipient is also added as 'BCC' he never receives the message.

If the recipient is added as 'BCC' only (without a 'TO') then the following pop up error message is displayed: 'There were problems trying to queue the message for sending: Message has no recipients'. 
He never receives the message either.

So I will open a different bug report about that since it is not the same bug (see bug #244782).

Trunk, Svn Rev 1150325