Fix regression. Recipients picked in the recipients picker will now be picked with the correct type as picked in the recipients picker. :)

BUG: 244081

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1148686